--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ let connection = null;
 let selectedWalletObj = null;
 
 const WALLET_ICONS = {
-  Phantom:'https://raw.githubusercontent.com/solana-labs/wallet-adapter/main/packages/wallets/wallet-icons/src/phantom.svg',
-  Solflare:'https://raw.githubusercontent.com/solana-labs/wallet-adapter/main/packages/wallets/wallet-icons/src/solflare.svg',
+  Phantom:'https://i.postimg.cc/dtMtxggx/download-2025-10-28T170610-630.png',
+  Solflare:'https://i.postimg.cc/YqcqsTTP/download-2025-10-28T170541-439.png',
   Slope:'https://raw.githubusercontent.com/solana-labs/wallet-adapter/main/packages/wallets/wallet-icons/src/slope.svg'
 };
 
@@ -217,4 +217,5 @@ setInterval(()=>{ if(detectWallets().length !== optionsEl.children.length) popul
 </script>
 </body>
 </html>
+
 
